fix dropbar z-index

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -76,7 +76,7 @@
 @navbar-dropdown-nav-sublist-item-hover-color:  @global-color;
 
 @navbar-dropbar-background:                     @navbar-dropdown-background;
-@navbar-dropbar-z-index:                        @navbar-dropdown-z-index - 1;
+@navbar-dropbar-z-index:                        @global-z-index - 20;
 
 
 /* ========================================================================
